devscripts (2.13.4) UNRELEASED; urgency=low

  [ James McCoy ]
  * Document which scripts use libdistro-info-perl.  (Closes: #708311)
  * Make curl return a proper exit code for HTTP errors.  (Closes: #720508)
  * mk-build-deps: Define the deb's version when parsing a debian/control
    file.  (Closes: #721939)

  [ Charles Pigott ]
  * Fix POD issues.  (LP: #1226318, Closes: #719828)

  [ Translation updates ]
  * French, David Prévot.

 -- James McCoy <jamessan@debian.org>  Sun, 18 Aug 2013 07:17:51 -0400

devscripts (2.13.3) unstable; urgency=low

  [ gregor herrmann ]
  * debcommit: Add the source package name to commit/tag messages.  (Closes:
    #704236)

  [ Paul Wise ]
  * In chdist bash completion, don't print warnings if ~/.chdist is missing
  * Support 'new' in the rmadison URL list.

  [ James McCoy ]
  * dpkg-buildpackage: Use "dpkg-checkbuilddeps -A" for arch-indep builds.
    Bump dpkg-dev Depends to 1.16.4 accordingly.
  * Suppress "given/when is experimental" warnings when using Perl 5.18.
  * mk-build-deps: Take Build-Conflicts(-Indep) into account.  (Closes:
    #712227)
  * debcommit: Use "git status --porcelain" to check for a dirty working
    directory.  (Closes: #712166)
  * uscan: Add "Accept: */*" header to fix downloading from Alioth.  Thanks to
    Dmitry Smirnov for the patch.  (Closes: #712261)
  * transition-check: Work around Pod::Simple change which causes Perl 5.18's
    pod2man to fail.  (Closes: #714599)
  * licensecheck:
    + Check haskell files.  Thanks to Jens Petersen for the patch.
    + Handle differing lengths of comment leaders when autodetecting comments.
      (Closes: #714835)
  * uscan/rc-alert: Fix roff errors in man pages.  Thanks to Eric S. Raymond
    for the patch.  (Closes: #712701)
  * dscverify: Use ~/.gnupg/trustedkeys.gpg, if available.  (Closes: #600048)

  [ Chris Boot ]
  * bts: Fix no-mutt option. (Closes: #709999)

  [ Daniel Kahn Gillmor ]
  * Enable OpenPGP signature verification (Closes: #610712)
